--- a/helm-chart/flask-app/templates/service.yaml
+++ b/helm-chart/flask-app/templates/service.yaml
@@ -1,15 +1,18 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "flask-app.fullname" . }}
+  name: "{{ .Values.metadata.name | default .Release.Name}}-service"
   labels:
-    {{- include "flask-app.labels" . | nindent 4 }}
+    app: {{ .Release.Name }} 
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
+    - name: http
+      port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.targetPort }}
       protocol: TCP
-      name: http
+      
+
   selector:
-    {{- include "flask-app.selectorLabels" . | nindent 4 }}
+    app: {{ .Release.Name }}
+
