--- a/helm-chart/flask-app/templates/service.yaml
+++ b/helm-chart/flask-app/templates/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: "{{ .Values.metadata.name | default .Release.Name}}-service"
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "alb"
   labels:
     app: {{ .Release.Name }} 
 spec:
